Fix svg vertical align

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -203,6 +203,7 @@ pre {
     viewBox: "0 0 16 16";
     fill: #{$grey-color};
     padding-right: 5px;
+    vertical-align: middle;
 }
 
 .social-media-list {
